Added quick navigation links below the search bar: Browse Photos, Find Services, About Us

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -129,7 +129,7 @@ const nationalities = ['Congolese', 'Burundians', 'Rwandans', 'Somalis', 'Ethiop
 
         {/* Search Bar */}
         <div class="max-w-2xl mx-auto">
-          <form action="/search" method="GET" class="relative">
+          <form action="/search/results/" method="GET" class="relative">
             <input
               type="text"
               name="q"
